2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (MOMPROCESSEDEXAMPLEFILES): Include "typesetting.pdf"
	only if `HAVE_URW_FONTS`, since the document demands them.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am: Rename `BUILD_PDFDOC` to `USE_GROPDF`.

2022-05-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am ($(MOMPROCESSEDEXAMPLEFILES)): Depend on new name for
	devpdf stamp file.

2022-04-12  Ingo Schwarze <schwarze@openbsd.org>

	Delete the harmful, ill-designed, buggy, and essentially
	unmaintained and untested --with-doc option of the configure
	script.  See the NEWS file for more details on the rationale.

	* mom.am: Delete one INSTALL_SHIPPED_HTML and one BUILD_EXAMPLES
	conditional and use BUILD_PDFDOC instead of BUILD_PDFEXAMPLES.

2021-03-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am: Eliminate `MOM_TFLAG` and `MOM_PFLAG` Make macros;
	they were expanded in only one place.
	(MOMPDFMOM): Track rename of Make macro `TFLAG` to `MFLAG`.

2022-03-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (MOMPROCESSEDEXAMPLEFILES): Drop dependency on gnu.eps.
	No mom document appears to require this file; it came in with
	the initial Automake file for mom in commit 4d84d0f1d, 27
	January 2015, and may have been a copy-and-paste error.

2021-10-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am:
	(mom_test_template): Pull file name into a new variable.
	(EXTRA_DIST, contrib/mom/examples/tests-mom.sh): Use it.
	(contrib/mom/examples/tests-mom.sh): Build more quietly;
	prefix rule with `$(AM_V_GEN)`.  Also run `chmod` conditionally.

2021-10-04

	* version 2.5 release (see NEWS)

	* removed orphaned stubs for abandoned cutaround feature from
		om.tmac

2019-12-26

	* added PREFIX_CHAPTER argument to HEADING_STYLE

	* added TOC_HEADING; single line, non-pagenumbered insertions into
		the TOC

2019-11-03

	* templates added for setting up copyright pages
