@@ -529,11 +529,11 @@ Change into the directory holding the new font.
 </p>
 
 <p>
-For convenience in the next step, make a symbolic link to 
-the file 'textmap':
+For convenience in the next step, make a symbolic link to
+the file 'text.map':
 <br/>
 <span class="pre-in-pp">
-  ln -s &lt;prefix&gt;/&lt;version&gt;/font/devps/generate/textmap .
+  ln -s &lt;prefix&gt;/&lt;version&gt;/font/devps/generate/text.map .
 </span>
 See
 <a href="#small-note">here</a>
@@ -570,7 +570,7 @@ This will create three new files with the extensions .t42, .pfa, and
 .afm.  Next, run
 <br/>
 <span class="pre-in-pp">
-  afmtodit &lt;afm file&gt; textmap &lt;groff font&gt;
+  afmtodit &lt;afm file&gt; text.map &lt;groff font&gt;
 </span>
 This will create a groff font with the name you give.  (See
 <a href="#groff-font-names">here</a>
@@ -601,7 +601,7 @@ This will create two new files with the extensions .pfa, and .afm.
 Next, run
 <br/>
 <span class="pre-in-pp">
-  afmtodit &lt;afm file&gt; textmap &lt;groff font&gt;
+  afmtodit &lt;afm file&gt; text.map &lt;groff font&gt;
 </span>
 Move the .pfa and groff font files to
 <kbd>&lt;prefix&gt;/&lt;site-font&gt;/devps/</kbd>.
