@@ -1,5 +1,13 @@
 2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* momdoc/appendices.html: Reflect file rename in groff
+	distribution: the name of the file mapping Adobe Glyph List
+	names to groff special character identifiers for text (as
+	opposed to "special") fonts has changed from "textmap" to
+	"text.map".
+
+2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* mom.am (MOMPROCESSEDEXAMPLEFILES): Include "typesetting.pdf"
 	only if `HAVE_URW_FONTS`, since the document demands them.
 
